2011-10-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘fcntl-h’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘fcntl-h’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘stat’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘stat’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘ssize_t’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘ssize_t’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘open’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘open’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use gnulib to implement ‘exiting’ func attribute.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘snippet/_Noreturn’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘snprintf’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘snprintf’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Decruft: Remove obsolete handling for broken ‘printf %.2d’.

	* configure.ac (rcs_cv_dot2_ok): Delete AC_CACHE_CHECK.
	(PRINTF_DOT2_OK): Delete AC_DEFINE_UNQUOTED.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW): Remove ‘rcs_cv_dot2_ok’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘sprintf-posix’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘sprintf-posix’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘opendir’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘opendir’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘fstat’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘fstat’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib module ‘closedir’.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘closedir’.

2011-10-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use gnulib for large file support.

	* m4/gnulib-cache.m4 (gl_MODULES): Add ‘largefile’.
	* configure.ac (AC_SYS_LARGEFILE): Delete macro call.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>
